Aligned header image and fixed font size in main

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .footer {
